# utf8string

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  todo.txt
include/: logger.h  utf8proc.h  utf8string.h
src/: logger.c  utf8string.c
tests/: CMakeLists.txt  unittest.h  utf8test.c
